<resources>
    <string name="app_name">SepsisMonitor</string>
    <string name="welcome">Welcome to SepsisMonitor</string>
    <string name="to_login">To Login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="id">ID</string>
    <string name="loading">Loading…</string>
    <string name="next">\></string>
    <string name="alternative">▼</string>
    <string name="admission">ADM</string>
    <string name="er_sepsis_triage">ER S T</string>
    <string name="select_phase">Select Phase</string>
    <string name="assign">Assign</string>
    <string name="assign_to_patient">Assign to Patient</string>
    <string name="name">Name</string>
    <string name="staff_id">Staff ID</string>
    <string name="enter_id">Enter ID</string>
    <string name="enter_patient_id">Enter Patient ID</string>
    <string name="enter_patient_first_name">Enter First Name</string>
    <string name="enter_patient_last_name">Enter Last Name</string>
    <string name="app_description">The Sepsis Department Management App</string>
    <string name="enter_credentials">Please Enter Your Credentials</string>
    <string name="add_patient">Add Patient</string>
    <string name="remove">Remove</string>
    <string name="back">Back</string>
</resources>