<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startActivityParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StartActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/addNewPatientCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:cardBackgroundColor="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/add_patient"
                        android:textSize="32sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/enterNewPatientIdEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="64dp"
                        android:ems="10"
                        android:hint="@string/enter_patient_id"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <EditText
                        android:id="@+id/enterNewPatientFirstNameEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/enter_patient_first_name"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="@+id/enterNewPatientIdEditText"
                        app:layout_constraintStart_toStartOf="@+id/enterNewPatientIdEditText"
                        app:layout_constraintTop_toBottomOf="@+id/enterNewPatientIdEditText" />

                    <EditText
                        android:id="@+id/enterNewPatientLastNameEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:hint="@string/enter_patient_last_name"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="@+id/enterNewPatientFirstNameEditText"
                        app:layout_constraintStart_toStartOf="@+id/enterNewPatientFirstNameEditText"
                        app:layout_constraintTop_toBottomOf="@+id/enterNewPatientFirstNameEditText" />

                    <Button
                        android:id="@+id/addPatientButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/add_patient"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/enterNewPatientLastNameEditText"
                        app:layout_constraintStart_toStartOf="@+id/enterNewPatientLastNameEditText"
                        app:layout_constraintTop_toBottomOf="@+id/enterNewPatientLastNameEditText" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/popUpPatientOverviewCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/cardview_shadow_start_color"
        app:cardUseCompatPadding="true"
        app:contentPadding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/popUpAssignPatientToStaffButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/loading"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/popUpPatientNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"

                android:layout_marginEnd="32dp"
                android:text="@string/loading"
                app:layout_constraintBottom_toBottomOf="@+id/popUpAssignPatientToStaffButton"
                app:layout_constraintEnd_toStartOf="@+id/popUpPatientToNextPhaseButton"
                app:layout_constraintStart_toEndOf="@+id/popUpAssignPatientToStaffButton"
                app:layout_constraintTop_toTopOf="@+id/popUpAssignPatientToStaffButton" />

            <TextView
                android:id="@+id/popUpMultipleNextPhasesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_phase"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/popUpAssignPatientToStaffButton"
                app:layout_constraintEnd_toStartOf="@+id/popUpPatientToNextPhaseButton"
                app:layout_constraintStart_toEndOf="@+id/popUpAssignPatientToStaffButton"
                app:layout_constraintTop_toTopOf="@+id/popUpPatientToAdmissionPhaseButton" />

            <Button
                android:id="@+id/popUpPatientToNextPhaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/popUpPatientToERSepsisTriagePhaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/er_sepsis_triage"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/popUpPatientToNextPhaseButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/popUpPatientToAdmissionPhaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/admission"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/popUpAssignPatientToStaffButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/patientsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPatientFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#C8C8C8"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/popUpPatientOverviewCardView"
        app:layout_constraintEnd_toEndOf="@+id/startActivityParent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <androidx.cardview.widget.CardView
        android:id="@+id/assignStaffToPatientCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:cardBackgroundColor="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/enterStaffIdEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:ems="10"
                        android:hint="@string/staff_id"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/enterStaffIdTextView" />

                    <TextView
                        android:id="@+id/enterStaffIdTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/assign"
                        android:textSize="32sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/assignStaffToPatientButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/assign_to_patient"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/enterStaffIdEditText" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>